frontend/VtParser.cpp

// Generated from ../Vt.g4 by ANTLR 4.10.1


#include "VtListener.h"
#include "VtVisitor.h"

#include "VtParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VtParserStaticData final {
  VtParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VtParserStaticData(const VtParserStaticData&) = delete;
  VtParserStaticData(VtParserStaticData&&) = delete;
  VtParserStaticData& operator=(const VtParserStaticData&) = delete;
  VtParserStaticData& operator=(VtParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag vtParserOnceFlag;
VtParserStaticData *vtParserStaticData = nullptr;

void vtParserInitialize() {
  assert(vtParserStaticData == nullptr);
  auto staticData = std::make_unique<VtParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "varDecl", "type", "assignment", "printStmt", 
      "ifStmt", "whileStmt", "block", "expr"
    },
    std::vector<std::string>{
      "", "'int'", "'string'", "'if'", "'else'", "'while'", "'print'", "'and'", 
      "'or'", "'not'", "", "", "", "'='", "';'", "'('", "')'", "'{'", "'}'", 
      "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", "'>='", "'=='", 
      "'!='"
    },
    std::vector<std::string>{
      "", "INT_KW", "STRING_KW", "IF_KW", "ELSE_KW", "WHILE_KW", "PRINT_KW", 
      "AND_KW", "OR_KW", "NOT_KW", "INT_LITERAL", "STRING_LITERAL", "ID", 
      "EQ", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "PLUS", "MINUS", 
      "STAR", "DIV", "LT", "GT", "LE", "GE", "EQEQ", "NEQ", "WS", "LINE_COMMENT", 
      "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  vtParserStaticData = staticData.release();
}

}

VtParser::VtParser(TokenStream *input) : VtParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

VtParser::VtParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  VtParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *vtParserStaticData->atn, vtParserStaticData->decisionToDFA, vtParserStaticData->sharedContextCache, options);
}

VtParser::~VtParser() {
  delete _interpreter;
}

const atn::ATN& VtParser::getATN() const {
  return *vtParserStaticData->atn;
}

std::string VtParser::getGrammarFileName() const {
  return "Vt.g4";
}

const std::vector<std::string>& VtParser::getRuleNames() const {
  return vtParserStaticData->ruleNames;
}

const dfa::Vocabulary& VtParser::getVocabulary() const {
  return vtParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView VtParser::getSerializedATN() const {
  return vtParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

VtParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::ProgramContext::EOF() {
  return getToken(VtParser::EOF, 0);
}

std::vector<VtParser::StatementContext *> VtParser::ProgramContext::statement() {
  return getRuleContexts<VtParser::StatementContext>();
}

VtParser::StatementContext* VtParser::ProgramContext::statement(size_t i) {
  return getRuleContext<VtParser::StatementContext>(i);
}


size_t VtParser::ProgramContext::getRuleIndex() const {
  return VtParser::RuleProgram;
}

void VtParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void VtParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any VtParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

VtParser::ProgramContext* VtParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, VtParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(23);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << VtParser::INT_KW)
      | (1ULL << VtParser::STRING_KW)
      | (1ULL << VtParser::IF_KW)
      | (1ULL << VtParser::WHILE_KW)
      | (1ULL << VtParser::PRINT_KW)
      | (1ULL << VtParser::ID)
      | (1ULL << VtParser::LBRACE))) != 0)) {
      setState(20);
      statement();
      setState(25);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(26);
    match(VtParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

VtParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VtParser::VarDeclContext* VtParser::StatementContext::varDecl() {
  return getRuleContext<VtParser::VarDeclContext>(0);
}

tree::TerminalNode* VtParser::StatementContext::SEMI() {
  return getToken(VtParser::SEMI, 0);
}

VtParser::AssignmentContext* VtParser::StatementContext::assignment() {
  return getRuleContext<VtParser::AssignmentContext>(0);
}

VtParser::PrintStmtContext* VtParser::StatementContext::printStmt() {
  return getRuleContext<VtParser::PrintStmtContext>(0);
}

VtParser::IfStmtContext* VtParser::StatementContext::ifStmt() {
  return getRuleContext<VtParser::IfStmtContext>(0);
}

VtParser::WhileStmtContext* VtParser::StatementContext::whileStmt() {
  return getRuleContext<VtParser::WhileStmtContext>(0);
}

VtParser::BlockContext* VtParser::StatementContext::block() {
  return getRuleContext<VtParser::BlockContext>(0);
}


size_t VtParser::StatementContext::getRuleIndex() const {
  return VtParser::RuleStatement;
}

void VtParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void VtParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any VtParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

VtParser::StatementContext* VtParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, VtParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case VtParser::INT_KW:
      case VtParser::STRING_KW: {
        enterOuterAlt(_localctx, 1);
        setState(28);
        varDecl();
        setState(29);
        match(VtParser::SEMI);
        break;
      }

      case VtParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(31);
        assignment();
        setState(32);
        match(VtParser::SEMI);
        break;
      }

      case VtParser::PRINT_KW: {
        enterOuterAlt(_localctx, 3);
        setState(34);
        printStmt();
        setState(35);
        match(VtParser::SEMI);
        break;
      }

      case VtParser::IF_KW: {
        enterOuterAlt(_localctx, 4);
        setState(37);
        ifStmt();
        break;
      }

      case VtParser::WHILE_KW: {
        enterOuterAlt(_localctx, 5);
        setState(38);
        whileStmt();
        break;
      }

      case VtParser::LBRACE: {
        enterOuterAlt(_localctx, 6);
        setState(39);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

VtParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VtParser::TypeContext* VtParser::VarDeclContext::type() {
  return getRuleContext<VtParser::TypeContext>(0);
}

tree::TerminalNode* VtParser::VarDeclContext::ID() {
  return getToken(VtParser::ID, 0);
}

tree::TerminalNode* VtParser::VarDeclContext::EQ() {
  return getToken(VtParser::EQ, 0);
}

VtParser::ExprContext* VtParser::VarDeclContext::expr() {
  return getRuleContext<VtParser::ExprContext>(0);
}


size_t VtParser::VarDeclContext::getRuleIndex() const {
  return VtParser::RuleVarDecl;
}

void VtParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void VtParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any VtParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

VtParser::VarDeclContext* VtParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, VtParser::RuleVarDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    type();
    setState(43);
    match(VtParser::ID);
    setState(44);
    match(VtParser::EQ);
    setState(45);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

VtParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::TypeContext::INT_KW() {
  return getToken(VtParser::INT_KW, 0);
}

tree::TerminalNode* VtParser::TypeContext::STRING_KW() {
  return getToken(VtParser::STRING_KW, 0);
}


size_t VtParser::TypeContext::getRuleIndex() const {
  return VtParser::RuleType;
}

void VtParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void VtParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any VtParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

VtParser::TypeContext* VtParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, VtParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _la = _input->LA(1);
    if (!(_la == VtParser::INT_KW

    || _la == VtParser::STRING_KW)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

VtParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::AssignmentContext::ID() {
  return getToken(VtParser::ID, 0);
}

tree::TerminalNode* VtParser::AssignmentContext::EQ() {
  return getToken(VtParser::EQ, 0);
}

VtParser::ExprContext* VtParser::AssignmentContext::expr() {
  return getRuleContext<VtParser::ExprContext>(0);
}


size_t VtParser::AssignmentContext::getRuleIndex() const {
  return VtParser::RuleAssignment;
}

void VtParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void VtParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any VtParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

VtParser::AssignmentContext* VtParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 8, VtParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(VtParser::ID);
    setState(50);
    match(VtParser::EQ);
    setState(51);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

VtParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::PrintStmtContext::PRINT_KW() {
  return getToken(VtParser::PRINT_KW, 0);
}

VtParser::ExprContext* VtParser::PrintStmtContext::expr() {
  return getRuleContext<VtParser::ExprContext>(0);
}


size_t VtParser::PrintStmtContext::getRuleIndex() const {
  return VtParser::RulePrintStmt;
}

void VtParser::PrintStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStmt(this);
}

void VtParser::PrintStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStmt(this);
}


std::any VtParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}

VtParser::PrintStmtContext* VtParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, VtParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(VtParser::PRINT_KW);
    setState(54);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

VtParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::IfStmtContext::IF_KW() {
  return getToken(VtParser::IF_KW, 0);
}

tree::TerminalNode* VtParser::IfStmtContext::LPAREN() {
  return getToken(VtParser::LPAREN, 0);
}

VtParser::ExprContext* VtParser::IfStmtContext::expr() {
  return getRuleContext<VtParser::ExprContext>(0);
}

tree::TerminalNode* VtParser::IfStmtContext::RPAREN() {
  return getToken(VtParser::RPAREN, 0);
}

std::vector<VtParser::BlockContext *> VtParser::IfStmtContext::block() {
  return getRuleContexts<VtParser::BlockContext>();
}

VtParser::BlockContext* VtParser::IfStmtContext::block(size_t i) {
  return getRuleContext<VtParser::BlockContext>(i);
}

tree::TerminalNode* VtParser::IfStmtContext::ELSE_KW() {
  return getToken(VtParser::ELSE_KW, 0);
}


size_t VtParser::IfStmtContext::getRuleIndex() const {
  return VtParser::RuleIfStmt;
}

void VtParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}

void VtParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}


std::any VtParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}

VtParser::IfStmtContext* VtParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, VtParser::RuleIfStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(VtParser::IF_KW);
    setState(57);
    match(VtParser::LPAREN);
    setState(58);
    expr(0);
    setState(59);
    match(VtParser::RPAREN);
    setState(60);
    block();
    setState(63);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VtParser::ELSE_KW) {
      setState(61);
      match(VtParser::ELSE_KW);
      setState(62);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStmtContext ------------------------------------------------------------------

VtParser::WhileStmtContext::WhileStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::WhileStmtContext::WHILE_KW() {
  return getToken(VtParser::WHILE_KW, 0);
}

tree::TerminalNode* VtParser::WhileStmtContext::LPAREN() {
  return getToken(VtParser::LPAREN, 0);
}

VtParser::ExprContext* VtParser::WhileStmtContext::expr() {
  return getRuleContext<VtParser::ExprContext>(0);
}

tree::TerminalNode* VtParser::WhileStmtContext::RPAREN() {
  return getToken(VtParser::RPAREN, 0);
}

VtParser::BlockContext* VtParser::WhileStmtContext::block() {
  return getRuleContext<VtParser::BlockContext>(0);
}


size_t VtParser::WhileStmtContext::getRuleIndex() const {
  return VtParser::RuleWhileStmt;
}

void VtParser::WhileStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStmt(this);
}

void VtParser::WhileStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStmt(this);
}


std::any VtParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}

VtParser::WhileStmtContext* VtParser::whileStmt() {
  WhileStmtContext *_localctx = _tracker.createInstance<WhileStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, VtParser::RuleWhileStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(VtParser::WHILE_KW);
    setState(66);
    match(VtParser::LPAREN);
    setState(67);
    expr(0);
    setState(68);
    match(VtParser::RPAREN);
    setState(69);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

VtParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VtParser::BlockContext::LBRACE() {
  return getToken(VtParser::LBRACE, 0);
}

tree::TerminalNode* VtParser::BlockContext::RBRACE() {
  return getToken(VtParser::RBRACE, 0);
}

std::vector<VtParser::StatementContext *> VtParser::BlockContext::statement() {
  return getRuleContexts<VtParser::StatementContext>();
}

VtParser::StatementContext* VtParser::BlockContext::statement(size_t i) {
  return getRuleContext<VtParser::StatementContext>(i);
}


size_t VtParser::BlockContext::getRuleIndex() const {
  return VtParser::RuleBlock;
}

void VtParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void VtParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any VtParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

VtParser::BlockContext* VtParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, VtParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(VtParser::LBRACE);
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << VtParser::INT_KW)
      | (1ULL << VtParser::STRING_KW)
      | (1ULL << VtParser::IF_KW)
      | (1ULL << VtParser::WHILE_KW)
      | (1ULL << VtParser::PRINT_KW)
      | (1ULL << VtParser::ID)
      | (1ULL << VtParser::LBRACE))) != 0)) {
      setState(72);
      statement();
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(78);
    match(VtParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

VtParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t VtParser::ExprContext::getRuleIndex() const {
  return VtParser::RuleExpr;
}

void VtParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AndExprContext ------------------------------------------------------------------

std::vector<VtParser::ExprContext *> VtParser::AndExprContext::expr() {
  return getRuleContexts<VtParser::ExprContext>();
}

VtParser::ExprContext* VtParser::AndExprContext::expr(size_t i) {
  return getRuleContext<VtParser::ExprContext>(i);
}

tree::TerminalNode* VtParser::AndExprContext::AND_KW() {
  return getToken(VtParser::AND_KW, 0);
}

VtParser::AndExprContext::AndExprContext(ExprContext *ctx) { copyFrom(ctx); }

void VtParser::AndExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAndExpr(this);
}
void VtParser::AndExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAndExpr(this);
}

std::any VtParser::AndExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitAndExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StringLiteralContext ------------------------------------------------------------------

tree::TerminalNode* VtParser::StringLiteralContext::STRING_LITERAL() {
  return getToken(VtParser::STRING_LITERAL, 0);
}

VtParser::StringLiteralContext::StringLiteralContext(ExprContext *ctx) { copyFrom(ctx); }

void VtParser::StringLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStringLiteral(this);
}
void VtParser::StringLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStringLiteral(this);
}

std::any VtParser::StringLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitStringLiteral(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdExprContext ------------------------------------------------------------------

tree::TerminalNode* VtParser::IdExprContext::ID() {
  return getToken(VtParser::ID, 0);
}

VtParser::IdExprContext::IdExprContext(ExprContext *ctx) { copyFrom(ctx); }

void VtParser::IdExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdExpr(this);
}
void VtParser::IdExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdExpr(this);
}

std::any VtParser::IdExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VtVisitor*>(visitor))
    return parserVisitor->visitIdExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivContext ------------------------------------------------------------------

std::vector<VtParser::ExprContext *> VtParser::MulDivContext::expr() {
  return getRuleContexts<VtParser::ExprContext>();
}

VtParser::ExprContext* VtParser::MulDivContext::expr(size_t i) {
  return getRuleContext<VtParser::ExprContext>(i);
}

tree::TerminalNode* VtParser::MulDivContext::STAR() {
  return getToken(VtParser::STAR, 0);
}

tree::TerminalNode* VtParser::MulDivContext::DIV() {
  return getToken(VtParser::DIV, 0);
}

VtParser::MulDivContext::MulDivContext(ExprContext *ctx) { copyFrom(ctx); }

void VtParser::MulDivContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulDiv(this);
}
void VtParser::MulDivContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VtListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulDiv(this);
}
